force-app/main/default/objects/course__c/fields/Back_ground__c.field-meta.xml
<CustomField>
    <fullName>Back_ground__c</fullName>
    <label>Back ground</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>Mech</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Bio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>