force-app/main/default/objects/course__c/fields/batch__c.field-meta.xml
<CustomField>
    <fullName>batch__c</fullName>
    <label>batch</label>
    <type>Date</type>
</CustomField>