force-app/main/default/objects/course__c/fields/cust_name__c.field-meta.xml
<CustomField>
    <fullName>cust_name__c</fullName>
    <label>cust name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>