force-app/main/default/objects/course__c/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <label>discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>