force-app/main/default/objects/course__c/fields/duration__c.field-meta.xml
<CustomField>
    <fullName>duration__c</fullName>
    <label>duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>