force-app/main/default/objects/course__c/fields/faculty__c.field-meta.xml
<CustomField>
    <fullName>faculty__c</fullName>
    <label>faculty</label>
    <length>15</length>
    <type>Text</type>
</CustomField>