force-app/main/default/objects/course__c/fields/fee__c.field-meta.xml
<CustomField>
    <fullName>fee__c</fullName>
    <label>fee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>