force-app/main/default/objects/course__c/fields/mentor__c.field-meta.xml
<CustomField>
    <fullName>mentor__c</fullName>
    <label>mentor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>