force-app/main/default/objects/course__c/fields/mobile_no__c.field-meta.xml
<CustomField>
    <fullName>mobile_no__c</fullName>
    <label>mobile no</label>
    <type>Phone</type>
</CustomField>