force-app/main/default/objects/course__c/fields/No_of_Students__c.field-meta.xml
<CustomField>
    <fullName>No_of_Students__c</fullName>
    <label>No of Students</label>
    <summaryForeignKey>student__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>