force-app/main/default/objects/course__c/recordTypes/inclass.recordType-meta.xml
<RecordType>
    <fullName>inclass</fullName>
    <active>true</active>
    <label>inclass</label>
</RecordType>