force-app/main/default/objects/course__c/recordTypes/online.recordType-meta.xml
<RecordType>
    <fullName>online</fullName>
    <active>true</active>
    <label>online</label>
</RecordType>